# Subtitle-Resync

./: .gitignore  CMakeLists.txt  README.md  subtitle.cpp
docs/: code_documentation.adoc  compiling.adoc  installing_dependencies.adoc  usage.adoc
install/: build.sh
libs/lib_co-oCCur/SiftSRT/: .gitignore  README.md  SiftSRT.h
libs/lib_co-oCCur/SiftSRT/demo/: CMakeLists.txt  main.cpp  siftSRT
libs/lib_co-oCCur/SiftSRT/demo/example_files/: example1.srt
libs/lib_ext/CCAligner/: logger.h  params.cpp  read_wav_file.cpp  read_wav_file.h
libs/lib_ext/NumCpp/: NumCpp.hpp
libs/lib_ext/NumCpp/NumCpp/: Polynomial.hpp
libs/lib_ext/NumCpp/NumCpp/Functions/: gcd.hpp  lcm.hpp  left_shift.hpp
libs/lib_ext/NumCpp/NumCpp/Polynomial/: chebyshev_t.hpp  chebyshev_u.hpp
libs/lib_ext/chromaprint/src/: Makefile  chromaprint.cpp  cmake_install.cmake  fft.cpp  fft_lib_kissfft.h
libs/lib_ext/chromaprint/src/audio/: audio_slicer.h  ffmpeg_audio_processor.h  ffmpeg_audio_reader.h
libs/lib_ext/chromaprint/src/utils/: gaussian_filter.h  rolling_integral_image.h  scope_exit.h
src/: main.cpp  subtitle_resync.cpp  subtitle_resync.h
src/utils/: align_fingerprints.cpp  align_fingerprints.h  base64_strings.cpp  base64_strings.h  dactylogram.cpp  dactylogram.h  tool.cpp  tool.h
